src/validation/tests/snapshots/rusty__validation__tests__assignment_validation_tests__pointer_assignment_validation.snap
---
source: src/validation/tests/assignment_validation_tests.rs
expression: "&diagnostics"
---
error[E065]: The type DINT 32 is too small to hold a Pointer
   ┌─ <internal>:28:5
   │
28 │     v_dint := v_ptr_int; // INVALID
   │     ^^^^^^^^^^^^^^^^^^^ The type DINT 32 is too small to hold a Pointer

error[E037]: Invalid assignment: cannot assign 'REF_TO INT' to 'DINT'
   ┌─ <internal>:28:5
   │
28 │     v_dint := v_ptr_int; // INVALID
   │     ^^^^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign 'REF_TO INT' to 'DINT'

error[E065]: The type WORD 16 is too small to hold a Pointer
   ┌─ <internal>:29:5
   │
29 │     v_word := v_ptr_int; // INVALID
   │     ^^^^^^^^^^^^^^^^^^^ The type WORD 16 is too small to hold a Pointer

error[E037]: Invalid assignment: cannot assign 'REF_TO INT' to 'WORD'
   ┌─ <internal>:29:5
   │
29 │     v_word := v_ptr_int; // INVALID
   │     ^^^^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign 'REF_TO INT' to 'WORD'

warning[E090]: Pointers REF_TO INT and __POINTER_TO_REAL have different types
   ┌─ <internal>:31:5
   │
31 │     v_ptr_int := REF(v_real); // INVALID -> TODO: should be valid
   │     ^^^^^^^^^^^^^^^^^^^^^^^^ Pointers REF_TO INT and __POINTER_TO_REAL have different types

warning[E067]: Implicit downcast from 'REAL' to 'INT'.
   ┌─ <internal>:32:19
   │
32 │     v_ptr_int^ := v_real; // valid
   │                   ^^^^^^ Implicit downcast from 'REAL' to 'INT'.

warning[E067]: Implicit downcast from 'UDINT' to 'INT'.
   ┌─ <internal>:34:19
   │
34 │     v_ptr_int^ := v_udint; // valid
   │                   ^^^^^^^ Implicit downcast from 'UDINT' to 'INT'.

warning[E067]: Implicit downcast from 'DINT' to 'INT'.
   ┌─ <internal>:36:19
   │
36 │     v_ptr_int^ := v_dint; // valid
   │                   ^^^^^^ Implicit downcast from 'DINT' to 'INT'.

warning[E067]: Implicit downcast from 'TIME' to 'INT'.
   ┌─ <internal>:38:19
   │
38 │     v_ptr_int^ := v_time; // valid
   │                   ^^^^^^ Implicit downcast from 'TIME' to 'INT'.

warning[E067]: Implicit downcast from 'WORD' to 'INT'.
   ┌─ <internal>:40:19
   │
40 │     v_ptr_int^ := v_word; // valid
   │                   ^^^^^^ Implicit downcast from 'WORD' to 'INT'.

warning[E090]: Pointers REF_TO INT and __POINTER_TO_STRING have different types
   ┌─ <internal>:41:5
   │
41 │     v_ptr_int := REF(v_string); // INVALID
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^ Pointers REF_TO INT and __POINTER_TO_STRING have different types

error[E037]: Invalid assignment: cannot assign 'STRING' to 'INT'
   ┌─ <internal>:42:5
   │
42 │     v_ptr_int^ := v_string; // INVALID
   │     ^^^^^^^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign 'STRING' to 'INT'

error[E037]: Invalid assignment: cannot assign 'CHAR' to 'INT'
   ┌─ <internal>:44:5
   │
44 │     v_ptr_int^ := v_char; // INVALID
   │     ^^^^^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign 'CHAR' to 'INT'

warning[E067]: Implicit downcast from 'DATE' to 'INT'.
   ┌─ <internal>:46:19
   │
46 │     v_ptr_int^ := v_date; // valid
   │                   ^^^^^^ Implicit downcast from 'DATE' to 'INT'.

error[E037]: Invalid assignment: cannot assign 'STRING' to 'INT'
   ┌─ <internal>:48:5
   │
48 │     v_ptr_int^ := v_arr_string_3[0]; // INVALID
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign 'STRING' to 'INT'
